--- a/schemas/constructs/openapi/credentials.yml
+++ b/schemas/constructs/openapi/credentials.yml
@@ -15,8 +15,8 @@ servers:
 tags:
   - name: credentials
     description: APIs for Credentials
-security: 
-  -  jwt: []
+security:
+  - jwt: []
 
 components:
   securitySchemes:
@@ -31,7 +31,7 @@ components:
           $ref: ./common/core.yml#/components/schemas/id
         user_id:
           $ref: ./common/core.yml#/components/schemas/id
-        name: 
+        name:
           $ref: ./common/core.yml#/components/schemas/text
         type:
           type: string
@@ -41,7 +41,7 @@ components:
           $ref: ./common/core.yml#/components/schemas/created_at
         updated_at:
           $ref: ./common/core.yml#/components/schemas/updated_at
-        deleted_at: 
+        deleted_at:
           $ref: ./common/core.yml#/components/schemas/deleted_at
 
     credentialsPage:
@@ -52,7 +52,7 @@ components:
             credential:
               type: array
               items:
-                $ref: '#/components/schemas/credential'
+                $ref: "#/components/schemas/credential"
 
   requestBodies:
     credentialBody:
@@ -61,9 +61,9 @@ components:
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/credential'
-  
-# any special parameters for this tag
+            $ref: "#/components/schemas/credential"
+
+  # any special parameters for this tag
   parameters:
     credentialId:
       name: credential_id
@@ -82,20 +82,20 @@ paths:
       summary: Get user's credentials
       description: Get all user's credentials for logged in user
       parameters:
-      - $ref: ./common/parameters.yml#/components/schemas/page
-      - $ref: ./common/parameters.yml#/components/schemas/page_size
-      - $ref: ./common/parameters.yml#/components/schemas/search
-      - $ref: ./common/parameters.yml#/components/schemas/order
+        - $ref: ./common/parameters.yml#/components/parameters/page
+        - $ref: ./common/parameters.yml#/components/parameters/page_size
+        - $ref: ./common/parameters.yml#/components/parameters/search
+        - $ref: ./common/parameters.yml#/components/parameters/order
       responses:
-        '200':
+        "200":
           description: credentials
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/credentialsPage'
-        '401':
+                $ref: "#/components/schemas/credentialsPage"
+        "401":
           $ref: ./common/responses.yml#/401
-        '500':
+        "500":
           $ref: ./common/responses.yml#/500
     delete:
       tags:
@@ -104,13 +104,13 @@ paths:
       summary: Delete user's credentials
       description: Delete user's credentials (tombstoned records) for logged in user
       parameters:
-        - $ref: '#/components/parameters/credentialId'
+        - $ref: "#/components/parameters/credentialId"
       responses:
-        '200':
+        "200":
           $ref: ./common/responses.yml#/200
-        '401':
+        "401":
           $ref: ./common/responses.yml#/401
-        '500':
+        "500":
           $ref: ./common/responses.yml#/500
     post:
       tags:
@@ -119,13 +119,13 @@ paths:
       summary: Create Credential
       description: Create new credentials for logged in user
       requestBody:
-        $ref: '#/components/requestBodies/credentialBody'
+        $ref: "#/components/requestBodies/credentialBody"
       responses:
-        '201':
+        "201":
           $ref: ./common/responses.yml#/201
-        '401':
+        "401":
           $ref: ./common/responses.yml#/401
-        '500':
+        "500":
           $ref: ./common/responses.yml#/500
     put:
       tags:
@@ -134,11 +134,11 @@ paths:
       summary: Update credential
       description: Update credentials for logged in user
       requestBody:
-        $ref: '#/components/requestBodies/credentialBody'
+        $ref: "#/components/requestBodies/credentialBody"
       responses:
-        '200':
+        "200":
           $ref: ./common/responses.yml#/200
-        '401':
+        "401":
           $ref: ./common/responses.yml#/401
-        '500':
+        "500":
           $ref: ./common/responses.yml#/500
